--- a/CapstoneWeek2_1.ipynb
+++ b/CapstoneWeek2_1.ipynb
@@ -58,6 +58,7 @@
     "| ROADCOND | The condition of the road during the collision. |\n",
     "| LIGHTCOND |The light conditions during the collision.  |\n",
     "\n",
+    "The purpose of the project is to predict the severity of an accident based on this main features\n",
     "\n",
     "[^3]: https://s3.us.cloud-object-storage.appdomain.cloud/cf-courses-data/CognitiveClass/DP0701EN/version-2/Data-Collisions.csv\n",
     "\n",
